--- a/udm-web/src/styles/global.css
+++ b/udm-web/src/styles/global.css
@@ -1,7 +1,8 @@
 html,
 body {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    background-color: #000000;
 }
 a:hover {
     text-decoration: none !important;
